6-Metrics-Kubernetes/manifests/kube-state-metrics-service-d080b0a2-b1a6-4944-9bb4-40e40b5f94f9.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  labels:
    app: kube-state-metrics
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kube-state-metrics
  type: ClusterIP
