6-Metrics-Kubernetes/manifests/kube-state-metrics-ingress-a7ad6e4d-dc27-4011-92e8-25b88c3fdc84.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics-ingress
  namespace: kube-state-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kube-state-metrics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-state-metrics
                port:
                  number: 8080
